@@ -625,6 +625,7 @@ abstract class ApiBase {
 		'cantunblock' => array('code' => 'permissiondenied', 'info' => "You don't have permission to unblock users"),
 		'cannotundelete' => array('code' => 'cantundelete', 'info' => "Couldn't undelete: the requested revisions may not exist, or may have been undeleted already"),
 		'permdenied-undelete' => array('code' => 'permissiondenied', 'info' => "You don't have permission to restore deleted revisions"),
+		'dontcreate-exists' => array('code' => 'articleexists', 'info' => "The article you tried to create has been created already"),
 	);
 	
 	/**
